# Fp1

./: .gitignore  init.sql  sport-faculty.cabal
app/: Main.hs
src/: DB.hs  InitDB.hs  Models.hs
src/CRUD/: Competitions.hs  Members.hs  Schedule.hs  Sections.hs  Students.hs  Teachers.hs
