cabal-version:       2.4
name:                sport-faculty
version:             0.1.0.0

executable sport-faculty
  main-is:          Main.hs
  hs-source-dirs:   app, src
  build-depends:    base >= 4.7 && < 5,
                    sqlite-simple,
                    text,
                    time,
                    bytestring,
                    containers
  default-language: Haskell2010
  other-modules:
    DB
    InitDB
    Models
    CRUD.Students
    CRUD.Teachers
    CRUD.Sections
    CRUD.Members
    CRUD.Schedule
    CRUD.Competitions